[tool.poetry]
name = "handsynth"
version = "0.1.0"
description = "A simple python tool for handwriting synthesis via RNNs"
authors = ["myschoolstory <168579347+myschoolstory@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib="^2.1.0"
pandas="^0.22.0"
scikit-learn="^0.19.1"
scipy="^1.0.0"
svgwrite="^1.1.12"
tensorflow="^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
